// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`images with advanced options resizedImageUrl 1`] = `
"<!DOCTYPE html>
<html>
  <body>
    <img
      src=\\"test.png?w=420\\"
      width=\\"420\\"
      srcset=\\"test.png?w=320 320w, test.png?w=420 420w\\"
      sizes=\\"100vw\\"
      data-pristine=\\"test.png\\"
    />
  </body>
</html>
"
`;

exports[`images with advanced options runAfter 1`] = `
"<!DOCTYPE html>
<html>
  <body>
    <img
      src=\\"test-640.png\\"
      srcset=\\"
        test-320.png   320w,
        test-560.png   560w,
        test-800.png   800w,
        test-1040.png 1040w,
        test-1280.png 1280w
      \\"
      sizes=\\"100vw\\"
      data-pristine=\\"test.png\\"
      data-after=\\"hello!\\"
    />
  </body>
</html>
"
`;

exports[`images with advanced options runBefore 1`] = `
"<!DOCTYPE html>
<html>
  <body>
    <img
      src=\\"another-test-640.png\\"
      srcset=\\"
        another-test-320.png   320w,
        another-test-560.png   560w,
        another-test-800.png   800w,
        another-test-1040.png 1040w,
        another-test-1280.png 1280w
      \\"
      sizes=\\"100vw\\"
      data-pristine=\\"another-test.png\\"
    />
  </body>
</html>
"
`;

exports[`images with advanced options selector 1`] = `
"<!DOCTYPE html>
<html>
  <body>
    <img
      src=\\"test1-480.png\\"
      srcset=\\"
        test1-320.png   320w,
        test1-560.png   560w,
        test1-800.png   800w,
        test1-1040.png 1040w,
        test1-1280.png 1280w
      \\"
      sizes=\\"100vw\\"
      data-pristine=\\"test1.png\\"
    /><img src=\\"test2.png\\" class=\\"notransform\\" />
  </body>
</html>
"
`;
